--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@radix-ui/react-popover": "^1.0.6",
     "@radix-ui/react-scroll-area": "^1.0.4",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-tabs": "^1.0.4",
     "@splidejs/react-splide": "^0.7.12",
     "@types/node": "20.5.9",
     "@types/react": "18.2.21",
@@ -34,6 +35,7 @@
     "postcss": "8.4.29",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "recharts": "^2.8.0",
     "rehype-pretty-code": "^0.10.1",
     "shiki": "^0.14.4",
     "tailwind-merge": "^1.14.0",
